--- a/uncompiled_scss/styles/_login_form.scss
+++ b/uncompiled_scss/styles/_login_form.scss
@@ -31,7 +31,6 @@
 
     &.facebook-color {
       background: #3c5a96;
-
       &:hover {
         background: black;
       }
@@ -41,6 +40,18 @@
 
 .form-btn {
   margin: 30px 0;
+  a {
+    text-decoration: none;
+    margin-right: 30px;
+  }
+  .white{
+    color: $color-white;
+    text-transform: uppercase;
+  }
+  .red{
+    color: red;
+    text-transform: uppercase;
+  }
 }
 
 body.blacked {
