--- a/uncompiled_scss/style.scss
+++ b/uncompiled_scss/style.scss
@@ -1,13 +1,11 @@
 @import "grid/main";
 @import "hamburgers/main";
 @import "slick/main";
-
 @import "styles/normalize";
 @import "styles/variables";
 @import "styles/fonts";
 @import "styles/mixins";
 @import "styles/grid";
-
 @import "styles/common";
 @import "styles/text";
 @import "styles/header";
@@ -28,20 +26,20 @@
 @import "styles/partners";
 @import "styles/locations";
 @import "styles/login_form";
-@import "styles/inputs";
+@import "styles/wizard";
 
 body {
-  background: url("../images/background.svg") left top no-repeat, url("../images/film.svg") 50% -110px no-repeat,
-    url("../images/film.svg") 50% 500px no-repeat;
+
   font-family: "Futura PT Medium", sans-serif;
   font-style: normal;
   font-weight: 100;
   font-size: 18px;
 
-  margin-left: 50px;
-
   transition: background-color 500ms cubic-bezier(0.28, 0.01, 0.3, 0.9);
-
+  &.bg-image {
+    background: url("../images/background.svg") left top no-repeat, url("../images/film.svg") 50% -110px no-repeat,
+    url("../images/film.svg") 50% 550px no-repeat;
+  }
   &.blacked {
     background-color: black !important;
 
