--- a/uncompiled_scss/styles/_shadow_layers.scss
+++ b/uncompiled_scss/styles/_shadow_layers.scss
@@ -19,15 +19,19 @@
         display: block;
         position: absolute;
         top: 0;
-        bottom: 10px;
-        left: 10px;
+        opacity: 0;
+        bottom: 0;
+        left: 0;
         right: 0;
-        background: url('../images/eye.svg') left bottom no-repeat;
+        background: url('../images/eye.svg') center no-repeat;
       }
 
       &:hover {
         cursor: pointer;
         filter: grayscale(0%);
+      }
+      &:hover:after {
+        opacity: 1;
       }
     }
   }
@@ -95,3 +99,4 @@
     right: -5px;
   }
 }
+
