--- a/uncompiled_scss/style.scss
+++ b/uncompiled_scss/style.scss
@@ -26,7 +26,10 @@
 @import "styles/partners";
 @import "styles/locations";
 @import "styles/login_form";
+@import "styles/inputs";
 @import "styles/wizard";
+@import "styles/step_one";
+
 
 body {
 
