--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -598,7 +598,7 @@ html { -webkit-box-sizing: border-box; box-sizing: border-box; -ms-overflow-styl
 /* Dots */
 .slick-dotted.slick-slider { margin-bottom: 30px; }
 
-.slick-dots { list-style: none; display: block; padding: 0; margin: 0; width: 100%; }
+.slick-dots { list-style: none; display: block; padding: 0; width: 100%; margin: 30px 0; }
 
 .slick-dots li { position: relative; display: inline-block; height: 20px; width: 20px; margin: 10px; padding: 0; cursor: pointer; }
 
@@ -855,11 +855,19 @@ input[type="number"] { -moz-appearance: textfield; }
 
 .header-box { position: relative; }
 
+.header-box .title-steps { position: absolute; padding: 40px 60px 5px 8px; top: -25px; left: 220px; background: #777777; font-size: 12px; line-height: 15px; letter-spacing: 0.15em; text-transform: uppercase; color: #fff; }
+
 .header-box .link-to-home { position: absolute; top: 60px; left: -75px; }
+
+.header-box .link-to-home.sm-logo { top: 35px; left: 50px; }
 
 .header-box .header { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; }
 
+.header-box .header.sm-header { border-bottom: 1px solid red; padding: 50px 0; }
+
 .header-box .header .header-nav { -ms-flex-preferred-size: 45%; flex-basis: 45%; background: red; }
+
+.header-box .header .header-nav.sm-nav { -ms-flex-preferred-size: 300px; flex-basis: 300px; }
 
 .header-box .header .header-nav .navigation { display: -webkit-box; display: -ms-flexbox; display: flex; list-style: none; height: 50px; padding: 0; margin: 0; position: relative; }
 
@@ -867,23 +875,17 @@ input[type="number"] { -moz-appearance: textfield; }
 
 .header-box .header .header-nav .navigation .menu-item .profile-ico { background: url("../images/star.svg") center no-repeat, red; display: block; height: 50px; }
 
-.header-box .header .header-nav .navigation .menu-item .search-ico { background: url("../images/leans.svg") left bottom no-repeat, black; display: block; height: 50px; }
-
-.header-box .header .header-nav .navigation .menu-item .menu-ico { background: url("../images/menu.svg") center no-repeat, white; display: block; height: 50px; }
-
 .header-box .header .header-nav .navigation .menu-item .current-language { background: url("../images/menu.svg") center no-repeat, black; height: 50px; color: white; padding: 10px 11px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; }
 
-.header-box .header .header-nav .navigation .menu-item .current-language.bg-white { background: #fff; color: #000; }
+.header-box .header .header-nav .navigation .menu-item .bg-white { background: white; color: black; }
 
 .header-box .header .header-nav .navigation .menu-item.languages-menu { position: relative; }
 
 .header-box .header .header-nav .navigation .menu-item.languages-menu .languages { position: absolute; top: -200px; z-index: 5; list-style: none; padding: 0; margin: 0; }
 
-.header-box .header .header-nav .navigation .menu-item.languages-menu .languages.bg-white { background: #fff; color: #000; }
-
 .header-box .header .header-nav .navigation .menu-item.languages-menu .languages .language { width: 50px; height: 50px; padding: 11px; background: black; color: white; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; }
 
-.header-box .header .header-nav .navigation .menu-item.languages-menu .languages .language.bg-white { background: #fff; color: #000; }
+.header-box .header .header-nav .navigation .menu-item.languages-menu .languages .language.bg-white { background: white; color: black; }
 
 .header-box .header .header-nav .navigation .menu-item.languages-menu .languages .language:hover { background: red; cursor: pointer; }
 
@@ -897,17 +899,11 @@ input[type="number"] { -moz-appearance: textfield; }
 
 .header-box .header .header-nav .navigation .menu-item.multilinks .menu-link:last-child { color: white; }
 
-.header-box .header .header-nav .navigation .menu-item.drop-menu .drop-menu-body { display: none; position: absolute; z-index: 100; top: 50px; left: 0; right: 0; list-style: none; padding: 40px 0; margin: 0; background: url("../images/red-film.svg") 90% 93% no-repeat, black; }
+.header-box .header .header-nav .navigation .menu-item:hover { cursor: pointer; }
 
-.header-box .header .header-nav .navigation .menu-item.drop-menu .drop-menu-body li { display: block; cursor: pointer; }
+.header-box .header .header-nav .navigation .menu-item:hover .drop-menu-body { display: block; }
 
-.header-box .header .header-nav .navigation .menu-item.drop-menu .drop-menu-body li a { display: block; padding: 20px 50px; color: white; text-decoration: none; text-transform: uppercase; font-size: 20px; letter-spacing: 1px; }
-
-.header-box .header .header-nav .navigation .menu-item.drop-menu .drop-menu-body li a:hover { color: red; }
-
-.header-box .header .header-nav .navigation .menu-item.drop-menu:hover { cursor: pointer; }
-
-.header-box .header .header-nav .navigation .menu-item.drop-menu:hover .drop-menu-body { display: block; }
+.slider-box .controls { width: 500px; height: 100px; position: relative; bottom: 170px; left: 0; }
 
 .slider-box .slide .slide-body { display: -webkit-box; display: -ms-flexbox; display: flex; }
 
@@ -918,12 +914,6 @@ input[type="number"] { -moz-appearance: textfield; }
 .slider-box .slide .slide-body .right-side .film-box { height: 700px; width: 100%; position: relative; -webkit-filter: grayscale(100%); filter: grayscale(100%); background-size: cover; background-repeat: no-repeat; -webkit-transition: -webkit-filter 500ms ease-in-out; transition: -webkit-filter 500ms ease-in-out; -o-transition: filter 500ms ease-in-out; transition: filter 500ms ease-in-out; transition: filter 500ms ease-in-out, -webkit-filter 500ms ease-in-out; cursor: pointer; }
 
 .slider-box .slide .slide-body .right-side .film-box .film-body { position: absolute; bottom: 0; padding-left: 50px; }
-
-.slider-box .slide .slide-body .right-side .film-box .film-body .awards { position: relative; right: -100%; }
-
-.slider-box .slide .slide-body .right-side .film-box .film-body .awards .palma { content: ""; background: url("../images/palma-ico.png") center no-repeat; display: block; width: 97px; height: 53px; }
-
-.slider-box .slide .slide-body .right-side .film-box .film-body .awards .oskar { content: ""; background: url("../images/oscar-img.png") center no-repeat; display: block; width: 40px; height: 102px; }
 
 .slider-box .slide .slide-body .right-side .film-box .film-name { color: white; font-size: 45px; line-height: 1; margin-bottom: 50px; font-weight: bold; font-family: "Futura PT Book", sans-serif; margin-top: 15px; }
 
@@ -1167,9 +1157,11 @@ input[type="number"] { -moz-appearance: textfield; }
 
 .shadow-layer .shadow-layer-films .shadow-film { -webkit-transition: -webkit-filter 500ms ease-in-out; transition: -webkit-filter 500ms ease-in-out; -o-transition: filter 500ms ease-in-out; transition: filter 500ms ease-in-out; transition: filter 500ms ease-in-out, -webkit-filter 500ms ease-in-out; -webkit-filter: grayscale(100%); filter: grayscale(100%); position: relative; }
 
-.shadow-layer .shadow-layer-films .shadow-film::after { content: ''; display: block; position: absolute; top: 0; bottom: 10px; left: 10px; right: 0; background: url("../images/eye.svg") left bottom no-repeat; }
+.shadow-layer .shadow-layer-films .shadow-film::after { content: ''; display: block; position: absolute; top: 0; opacity: 0; bottom: 0; left: 0; right: 0; background: url("../images/eye.svg") center no-repeat; }
 
 .shadow-layer .shadow-layer-films .shadow-film:hover { cursor: pointer; -webkit-filter: grayscale(0%); filter: grayscale(0%); }
+
+.shadow-layer .shadow-layer-films .shadow-film:hover:after { opacity: 1; }
 
 .shadow-layer .shadow-film-image { display: block; }
 
@@ -1241,6 +1233,8 @@ input[type="number"] { -moz-appearance: textfield; }
 
 .form-box { padding-right: 20%; }
 
+.form-box .form-checkbox { margin-bottom: 25px; }
+
 .form-box input { background: white; color: #777777; display: block; width: 100%; padding: 30px 10px 8px 15px; margin-bottom: 20px; border: 1px solid black; }
 
 .form-box input::-webkit-input-placeholder { text-transform: uppercase; }
@@ -1251,7 +1245,7 @@ input[type="number"] { -moz-appearance: textfield; }
 
 .form-box input::placeholder { text-transform: uppercase; }
 
-.form-box .link-recovery { text-decoration: none; margin-left: 25px; }
+.form-box .link-recovery { text-decoration: none; margin-left: 10px; }
 
 .form-box button { width: 100%; margin-bottom: 20px; border: none; }
 
@@ -1277,15 +1271,15 @@ body.blacked .form-box .button:hover, body.blacked .form-box button:hover { back
 
 input[type="checkbox"]:checked, [type="checkbox"]:not(:checked) { position: absolute; left: -9999px; }
 
-input[type="checkbox"]:checked + label, input[type="checkbox"]:not(:checked) + label { position: relative; padding-left: 50px; margin: 30px 0px; cursor: pointer; line-height: 40px; display: inline-block; color: #000; }
+input[type="checkbox"]:checked + label, input[type="checkbox"]:not(:checked) + label { position: relative; padding-left: 50px; margin: 10px 0 5px 0; cursor: pointer; line-height: 40px; display: inline-block; color: #000; }
 
-input[type="checkbox"]:checked + label.bg-red, input[type="checkbox"]:not(:checked) + label.bg-red { color: white; font-size: 14px; line-height: 23px; letter-spacing: 0.25px; }
+input[type="checkbox"]:checked + label.bg-white, input[type="checkbox"]:not(:checked) + label.bg-white { color: white; font-size: 14px; line-height: 23px; letter-spacing: 0.25px; }
 
 input[type="checkbox"]:checked + label:before, input[type="checkbox"]:not(:checked) + label:before { content: ''; position: absolute; left: 0; top: 0; width: 25px; height: 25px; border: 1px solid #000; background: #fff; }
 
 input[type="checkbox"]:checked + label:after, input[type="checkbox"]:not(:checked) + label:after { content: ''; width: 15px; height: 15px; background: #000; position: absolute; top: 5px; left: 5px; -webkit-transition: all 0.2s ease; -o-transition: all 0.2s ease; transition: all 0.2s ease; }
 
-input[type="checkbox"]:checked + label:after .bg-red, input[type="checkbox"]:not(:checked) + label:after .bg-red { background: red; }
+input[type="checkbox"]:checked + label:after.bg-white, input[type="checkbox"]:not(:checked) + label:after.bg-white { background: red; }
 
 input[type="checkbox"]:not(:checked) + label:after { opacity: 0; -webkit-transform: scale(0); -ms-transform: scale(0); transform: scale(0); }
 
@@ -1293,7 +1287,7 @@ input[type="checkbox"]:checked + label:after { opacity: 1; -webkit-transform: sc
 
 input[type="radio"]:checked, [type="radio"]:not(:checked) { position: absolute; left: -9999px; }
 
-input[type="radio"]:checked + label, input[type="radio"]:not(:checked) + label { text-transform: capitalize; font-size: 18px; line-height: 40px; position: relative; padding-left: 28px; cursor: pointer; display: inline-block; color: #000; }
+input[type="radio"]:checked + label, input[type="radio"]:not(:checked) + label { text-transform: capitalize; font-size: 18px; line-height: 40px; position: relative; padding-left: 35px; margin-right: 70px; cursor: pointer; display: inline-block; color: #000; }
 
 input[type="radio"]:checked + label.bg-white, input[type="radio"]:not(:checked) + label.bg-white { color: white; }
 
@@ -1305,7 +1299,67 @@ input[type="radio"]:not(:checked) + label:after { opacity: 0; -webkit-transform:
 
 input[type="radio"]:checked + label:after { opacity: 1; -webkit-transform: scale(1); -ms-transform: scale(1); transform: scale(1); }
 
-body { background: url("../images/background.svg") left top no-repeat, url("../images/film.svg") 50% -110px no-repeat, url("../images/film.svg") 50% 500px no-repeat; font-family: "Futura PT Medium", sans-serif; font-style: normal; font-weight: 100; font-size: 18px; margin-left: 50px; -webkit-transition: background-color 500ms cubic-bezier(0.28, 0.01, 0.3, 0.9); -o-transition: background-color 500ms cubic-bezier(0.28, 0.01, 0.3, 0.9); transition: background-color 500ms cubic-bezier(0.28, 0.01, 0.3, 0.9); }
+.steps { float: right; }
+
+.steps li { margin-bottom: 16px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; height: 31px; position: relative; }
+
+.steps li a { color: black; text-transform: uppercase; font-size: 18px; line-height: 23px; text-decoration: none; }
+
+.content h4 { display: none; }
+
+.header-box .menu-link-bottom { margin-top: 20px; text-decoration: none; font-weight: bold; color: white; }
+
+#wizard form { margin-top: 60px; }
+
+#wizard .activity-form { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; margin-bottom: 50px; }
+
+#wizard .activity-form .activity-blocks { padding: 0 62px; }
+
+#wizard .activity-form .activity-blocks label { text-transform: uppercase; }
+
+#wizard .activity-form p { margin-left: 30px; color: #777777; }
+
+#wizard .title { margin-bottom: 40px; }
+
+#wizard .input-checkbox { margin: 50px 0 50px 24%; }
+
+#wizard .input-blocks label { width: 20%; float: left; margin-right: 30px; line-height: 30px; text-align: left; text-transform: capitalize; }
+
+#wizard .input-blocks select { width: 60%; background: white; color: #777777; display: block; padding: 30px 10px 8px 15px; margin-bottom: 20px; border: 1px solid black; }
+
+#wizard .input-blocks input { width: 60%; background: white; color: #777777; display: block; padding: 30px 10px 8px 15px; margin-bottom: 20px; border: 1px solid black; }
+
+#wizard .input-blocks input::-webkit-input-placeholder { text-transform: uppercase; }
+
+#wizard .input-blocks input:-ms-input-placeholder { text-transform: uppercase; }
+
+#wizard .input-blocks input::-ms-input-placeholder { text-transform: uppercase; }
+
+#wizard .input-blocks input::placeholder { text-transform: uppercase; }
+
+#wizard .forward { margin-top: 50px; min-width: 350px; }
+
+#wizard .photo-section { display: -webkit-inline-box; display: -ms-inline-flexbox; display: inline-flex; }
+
+#wizard .photo-title { font-size: 14px; line-height: 18px; }
+
+#wizard .photo-blocks-bottom { -ms-flex-preferred-size: 16%; flex-basis: 16%; margin-right: 50px; }
+
+#wizard .photo-blocks-bottom .photo-text { color: #777777; min-width: 315px; }
+
+#wizard .photo-blocks-bottom .big-vector { border: 1px solid black; padding: 40px 50px 0 50px; }
+
+#wizard .photo-blocks-bottom .big-vector-p { border: 1px solid black; padding: 30px 0 0 20px; }
+
+#wizard .photo-blocks-bottom .big-vector-p .arrow { margin-left: 35px; }
+
+#wizard .photo-blocks { -ms-flex-preferred-size: 15%; flex-basis: 15%; padding: 0 25px; margin-left: 10px; }
+
+#wizard .photo-blocks .vector { border: 1px solid black; padding: 6px 15px 0px 15px; height: 100px; }
+
+body { font-family: "Futura PT Medium", sans-serif; font-style: normal; font-weight: 100; font-size: 18px; -webkit-transition: background-color 500ms cubic-bezier(0.28, 0.01, 0.3, 0.9); -o-transition: background-color 500ms cubic-bezier(0.28, 0.01, 0.3, 0.9); transition: background-color 500ms cubic-bezier(0.28, 0.01, 0.3, 0.9); }
+
+body.bg-image { background: url("../images/background.svg") left top no-repeat, url("../images/film.svg") 50% -110px no-repeat, url("../images/film.svg") 50% 550px no-repeat; }
 
 body.blacked { background-color: black !important; }
 
