--- a/uncompiled_scss/slick/_slick_theme.scss
+++ b/uncompiled_scss/slick/_slick_theme.scss
@@ -66,8 +66,8 @@ $slick-opacity-not-active: 0.5 !default;
     list-style: none;
     display: block;
     padding: 0;
-    margin: 0;
     width: 100%;
+    margin: 30px 0;
     li {
         position: relative;
         display: inline-block;
