--- a/uncompiled_scss/styles/_header.scss
+++ b/uncompiled_scss/styles/_header.scss
@@ -56,17 +56,6 @@
             height: 50px;
           }
 
-          .search-ico {
-            background: url("../images/leans.svg") left bottom no-repeat, black;
-            display: block;
-            height: 50px;
-          }
-          .menu-ico {
-            background: url("../images/menu.svg") center no-repeat, white;
-            display: block;
-            height: 50px;
-          }
-
           .current-language {
             background: url("../images/menu.svg") center no-repeat, black;
             height: 50px;
@@ -75,10 +64,6 @@
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
-            &.bg-white {
-              background: $color-white;
-              color: $color-black;
-            }
           }
           .bg-white {
             background: white;
@@ -95,10 +80,7 @@
               list-style: none;
               padding: 0;
               margin: 0;
-              &.bg-white {
-                background: $color-white;
-                color: $color-black;
-              }
+
               .language {
                 width: 50px;
                 height: 50px;
@@ -110,8 +92,8 @@
                 flex-direction: column;
                 justify-content: flex-end;
                 &.bg-white {
-                  background: $color-white;
-                  color: $color-black;
+                  background: white;
+                  color: black
                 }
                 &:hover {
                   background: red;
