--- a/uncompiled_scss/styles/_inputs.scss
+++ b/uncompiled_scss/styles/_inputs.scss
@@ -1,3 +1,4 @@
+
 input[type="checkbox"]:checked,
 [type="checkbox"]:not(:checked) {
   position: absolute;
@@ -8,12 +9,12 @@ input[type="checkbox"]:checked + label,
 input[type="checkbox"]:not(:checked) + label {
   position: relative;
   padding-left: 50px;
-  margin: 30px 0px;
+  margin: 10px 0 5px 0;
   cursor: pointer;
   line-height: 40px;
   display: inline-block;
   color: $color-black;
-  &.bg-red {
+  &.bg-white {
     color: white;
     font-size: 14px;
     line-height: 23px;
@@ -45,7 +46,7 @@ input[type="checkbox"]:not(:checked) + label:after {
   left: 5px;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
-  .bg-red {
+  &.bg-white {
     background: red;
   }
 }
@@ -74,7 +75,8 @@ input[type="radio"]:not(:checked) + label {
   font-size: 18px;
   line-height: 40px;
   position: relative;
-  padding-left: 28px;
+  padding-left: 35px;
+  margin-right: 70px;
   cursor: pointer;
   display: inline-block;
   color: $color-black;
