--- a/uncompiled_scss/styles/_common.scss
+++ b/uncompiled_scss/styles/_common.scss
@@ -121,7 +121,10 @@
     margin-bottom: 40px;
   }
 }
-
+.forward {
+  margin-top: 50px;
+  min-width: 350px;
+}
 .red {
   color: red !important;
 }
